# learning-plang

./: CMakeLists.txt
.cache/clangd/index/: lexer.cpp.28FB2AB46040E123.idx  lexer.hpp.063A44043A54B2C3.idx  lexer_tests.cpp.D93E2BF9639484D7.idx  main.cpp.F6F37A8215812FE0.idx  token.cpp.7F0FD762EE85E267.idx  token.hpp.3B4DF8A64DF7C107.idx
src/: lexer.cpp  lexer.hpp  main.cpp  token.cpp  token.hpp
tests/: lexer_tests.cpp
